Fix alignment of Like button

--- a/sass/_share.scss
+++ b/sass/_share.scss
@@ -10,7 +10,7 @@
   }
   .like {
     position: relative;
-    top: -5px;
+    top: -1px;
     @media (max-width: $x-small) {
       top: 0;
     }
